project (${entry_name})

GFN_PROJECT_SOURCE_GET(${CMAKE_CURRENT_SOURCE_DIR} OUT_HEADER_S OUT_SOURCE_S)
set(SOURCES ${OUT_HEADER_S} ${OUT_SOURCE_S})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

target_include_directories(${PROJECT_NAME} 
PRIVATE
${CMAKE_CURRENT_SOURCE_DIR}
${CMAKE_CURRENT_SOURCE_DIR}/include
)

set(TARGET_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/${parent_dir_name}/${PROJECT_NAME}/${CMAKE_SYSTEM_NAME}")

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include DESTINATION ${TARGET_INSTALL_DIR}/${CMAKE_INSTALL_INCLUDEDIR})

install(TARGETS ${PROJECT_NAME}
    RUNTIME DESTINATION ${TARGET_INSTALL_DIR}/bin/
    LIBRARY DESTINATION ${TARGET_INSTALL_DIR}/lib/
    ARCHIVE DESTINATION ${TARGET_INSTALL_DIR}/lib/
)